<resources>
    <string name="app_name">VmCoffeeDemo</string>
    <string name="exit">退出</string>
    <string name="start_connect">开始通信</string>
    <string name="coffee_machine">咖啡机</string>
    <string name="ice_machine">冰机</string>
    <string name="make_drink">制作饮料</string>
    <string name="make_drink_step"><![CDATA[(步骤：①清除运行结果—>②制作饮料—>③开杯门(自动门)—>⑤关杯门(自动门)]]></string>
    <string name="clear_run_result">清除运行结果</string>
    <string name="coffee_machine_command">咖啡机指令</string>
    <string name="restart_board">重启驱动板</string>
    <string name="read_version">读取版本号</string>
    <string name="grinding_beans">磨豆</string>
    <string name="out_coffee_powder">出咖啡粉</string>
    <string name="brewing_motor">冲泡电机</string>
    <string name="brewing_motor_up">冲泡电机上置</string>
    <string name="brewing_motor_down">冲泡电机下置</string>
    <string name="open_cup_door_electric">开杯门\n(电动门)</string>
    <string name="close_cup_door_electric">关杯门\n(电动门)</string>
    <string name="open_cup_door_electromagnet">开杯门(s)\n(电磁铁门)</string>
    <string name="fall_cup">落杯</string>
    <string name="fall_lid">落盖</string>
    <string name="fall_stick">落棒</string>
    <string name="move_the_mouth_out">移嘴外置</string>
    <string name="move_the_mouth_in">移嘴内置</string>
    <string name="clean_all">清洗全部</string>
    <string name="setting_water_temp">配置水温</string>
    <string name="setting_infrared">配置红外线</string>
    <string name="setting_cup_door">配置杯门</string>
    <string name="min_Temp_range">最低温\n(75~105)</string>
    <string name="max_Temp_range">最高温\n(75~105)</string>
    <string name="has_infrared">有红外线</string>
    <string name="has_cup_door">有杯门</string>
    <string name="cup_door">杯门</string>
    <string name="pipeline_value">管道%1$d</string>
    <string name="all">全部</string>
    <string name="clean">清洗</string>
    <string name="out_water">出水</string>
    <string name="water_volume_ml">水量(ml)</string>
    <string name="out_drink">出饮</string>
    <string name="cabinet_door">柜门</string>
    <string name="open_cabinet_door">开柜门</string>
    <string name="read_machine_state">读机器状态</string>
    <string name="get_all_fault">获取所有故障</string>
    <string name="ice_machine_command">冰机指令</string>
    <string name="self_check">自检</string>
    <string name="out_ice_water_ml">出冰水(ml)</string>
    <string name="out_ice_cube_g">出冰块(g)</string>
    <string name="drain_ice_s">排冰(s)</string>
    <string name="revise">校正</string>
    <string name="remove_peel">去皮</string>
    <string name="command_send_state">指令发送状态</string>
    <string name="machine_state">机器状态</string>
    <string name="current_water_temp_point">当前水温：</string>
    <string name="max_water_temp_point">最高水温：</string>
    <string name="min_water_temp_point">最低水温：</string>
    <string name="surplus_water_yield_point">剩余水量：</string>
    <string name="error_code_point">错误码：</string>
    <string name="current_action_point">当前动作：</string>
    <string name="result_point">结果：</string>
    <string name="machine_state_point">机器状态：</string>
    <string name="current_setting_point">当前配置：</string>
    <string name="ice_machine_state_point">冰机状态：</string>
    <string name="ice_temp_point">冰温度：</string>
    <string name="ice_electronic_scale_point">冰机电子秤：</string>
    <string name="ice_motor_state_point">冰机电机状态：</string>
    <string name="refresh_time_point">刷新时间：</string>
    <string name="coffee_machine_serial_port_open_value">咖啡机串口打开：%1$s</string>
    <string name="failure">失败</string>
    <string name="success">成功</string>
    <string name="cup_door_move_timeout">取杯门移动超时</string>
    <string name="cup_door_lock_no_close">取杯门锁门时没关好</string>
    <string name="cup_door_communication_failed">取杯门通讯失败</string>
    <string name="cup_door_motor_failure">取杯门电机故障</string>
    <string name="cup_door_electromagnet_connection_timeout">取杯门电磁铁连接超时</string>
    <string name="temperature_sensor_failure">温度传感器故障</string>
    <string name="flow_meter_failure">流量计故障</string>
    <string name="no_change_of_heating_temperature">加热器开温度无变化故障</string>
    <string name="cup_not_taken">杯子未取走</string>
    <string name="down_cup_timeout">落杯超时</string>
    <string name="change_cup_timeout">换杯超时</string>
    <string name="falling_powder_fault">落粉故障</string>
    <string name="the_grinder_has_run_out_of_time">磨豆电机运行超时</string>
    <string name="breather_switch_not_working">冲泡开关坏</string>
    <string name="brewer_timeout">冲泡器超时</string>
    <string name="nothing">无</string>
    <string name="waste_water_tank_filled_with">废水桶满</string>
    <string name="on_heating">开机加热中</string>
    <string name="tank_pumping_timeout">水箱抽水超时</string>
    <string name="move_mouth_move_timeout">移嘴移动超时</string>
    <string name="down_stick_timeout">落棒超时</string>
    <string name="down_lid_timeout">落盖超时</string>
    <string name="unknown">未知</string>
    <string name="mouth_connect_failure">移嘴通信失败</string>
    <string name="mouth_in_timeout">移嘴内置超时</string>
    <string name="mouth_out_timeout">移嘴外置超时</string>
    <string name="mouth_switch_failure">移嘴开关故障</string>
    <string name="comprehensive_function_board_connect_failure">综合功能板通信失败</string>
    <string name="take_cup_door">取杯门</string>
    <string name="down_cup">落杯</string>
    <string name="boiler">锅炉</string>
    <string name="move_the_mouth">移嘴</string>
    <string name="other">其它</string>
    <string name="comprehensive_function_board">综合功能板</string>
    <string name="machine_idle">机器空闲</string>
    <string name="open_cup_door">开杯门</string>
    <string name="close_cup_door">关杯门</string>
    <string name="out_grinding_beans_coffee">出磨豆咖啡</string>
    <string name="instant_path_out_drink">速溶%1$d出饮料</string>
    <string name="cleaning_instant_path">清洗速溶%1$d</string>
    <string name="cleaning_brew_motor">清洗冲泡器</string>
    <string name="out_sugar">出糖</string>
    <string name="down_stick">落棒</string>
    <string name="down_lid">落盖</string>
    <string name="idle_waiting">空闲等待</string>
    <string name="in_make_drink">正在制作饮料</string>
    <string name="make_success">制作成功</string>
    <string name="make_failure">制作失败</string>
    <string name="clean_complete">清洗完成</string>
    <string name="in_cleaning">正在清洗</string>
    <string name="down_cup_success_wait_out_drink">落杯成功等待出饮</string>
    <string name="in_down_cup">正在落杯</string>
    <string name="start_self_check_complete">开机自检完成</string>
    <string name="in_start_self_check">正在开机自检</string>
    <string name="no_cup">无杯</string>
    <string name="has_cup">有杯</string>
    <string name="cup_door_open">杯门开</string>
    <string name="cup_door_close">杯门关</string>
    <string name="big_door_open">柜门开</string>
    <string name="big_door_close">柜门关</string>
    <string name="has_infrared_mode">有红外模式</string>
    <string name="no_infrared_mode">无红外模式</string>
    <string name="has_cup_door_mode">有取杯门模式</string>
    <string name="no_cup_door_mode">无取杯门模式</string>
    <string name="door_move_timeout">电动门移动超时</string>
    <string name="lock_door_no_close">锁门时门没有关好</string>
    <string name="powder_value">粉%1$d</string>
    <string name="recipe_point">配方：</string>
    <string name="select_recipe">选配方</string>
    <string name="material_box">料盒</string>
    <string name="water_yield_range">水量\n(0~400ml)</string>
    <string name="out_material_time_s_range">出料时间(s)\n(0~25.5s)</string>
    <string name="continue_stir_time_s_info_range">持续搅拌时间(s)\n(水出完后的继续搅拌时间)\n(0~25.5s)</string>
    <string name="water_yield">水量</string>
    <string name="out_material">出料时间</string>
    <string name="continue_stir_time">持续搅拌时间</string>
    <string name="coffee">咖啡</string>
    <string name="material_box_1">料盒1</string>
    <string name="material_box_2">料盒2</string>
    <string name="material_box_3">料盒3</string>
    <string name="material_box_4">料盒4</string>
    <string name="material_box_5">料盒5</string>
    <string name="cancel">取消</string>
    <string name="ok">OK</string>
    <string name="machine_state_check_start">&#160;&#160;(机器状态检测启动)</string>
    <string name="electric_door">电动门</string>
    <string name="electromagnet_door">电磁铁门</string>
    <string name="please_take_cup">请取杯</string>
    <string name="please_select_recipe">请选配方</string>
    <string name="please_first_click_start_communication">请先点击【开始通信】</string>
    <string name="ice_water_machine">冰水机</string>
    <string name="setting_temp">设置温度</string>
    <string name="read_temp">读取温度</string>
    <string name="water_shortage_fault">缺水故障</string>
    <string name="lack_of_ice_failure">缺冰故障</string>
    <string name="out_ice_timeout">出冰超时</string>
    <string name="weighing_sensor_failure">称重传感器故障</string>
    <string name="weighing_motor_forward_timeout">称重电机正转超时</string>
    <string name="weighing_motor_reversal_timeout">称重电机反转超时</string>
    <string name="out_ice_motor_forward_timeout">排冰电机正转超时</string>
    <string name="out_ice_motor_reversal_timeout">排冰电机反转超时</string>
    <string name="gear_motor_stall">减速电机堵转</string>
    <string name="cooling_failure">制冷故障</string>
    <string name="thermometer_failure">温度计故障</string>
    <string name="in_out_ice">正在出冰</string>
    <string name="out_ice_success">出冰成功</string>
    <string name="out_ice_failure">出冰失败</string>
    <string name="drain_ice">排冰</string>
    <string name="in_drain_ice">正在排冰</string>
    <string name="drain_ice_success">排冰成功</string>
    <string name="drain_ice_failure">排冰失败</string>
    <string name="in_revise_coefficient">正在校正系数</string>
    <string name="revise_coefficient_success">校正成功</string>
    <string name="no_full_ice">未满</string>
    <string name="full_ice">满冰</string>
    <string name="normal">正常</string>
    <string name="over_current">过流</string>
    <string name="stall">堵转</string>
    <string name="gear_motor">减速电机</string>
    <string name="close">关闭</string>
    <string name="open">开启</string>
    <string name="compressor">压缩机</string>
    <string name="out_ice">出冰</string>
    <string name="low_temperature">温度过低</string>
    <string name="temperature">温度</string>
    <string name="scale_parameters">电子秤参数</string>
    <string name="parameters_of_reduction_motor">减速电机参数</string>
    <string name="read_version_number">读版本号</string>
    <string name="start_send_cmd_point">开始发送指令：</string>
    <string name="cmd_send_success">指令发送成功</string>
    <string name="cmd_send_failure">指令发送失败</string>
    <string name="current_has_cmd_send">当前已有指令正在发送，请稍后发送 </string>
    <string name="cmd_send_state">指令发送状态</string>
    <string name="receive_correct_response">收到正确回应 </string>
    <string name="cmd_send_no_response_wait_overtime_point">指令发送后没有收到回应消息 等待超时：</string>
    <string name="end_send_cmd_point">结束发送指令：</string>
    <string name="clear_run_result_failure">清除运行结果失败</string>
    <string name="max">最大</string>
    <string name="min">最小</string>
    <string name="language">语言</string>
    <string name="follow_system">跟随系统</string>
    <string name="chinese">中文</string>
    <string name="english">英文</string>

</resources>
